# texieve

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/example/dataset/: basic.yaml  full_prefilter.yaml  local_load.yaml  multilingual_with_sampling.yaml  partition.yaml  raw.yaml
config/example/experiment/: basic.yaml
config/example/finetune/: basic.yaml
config/example/pretrain/: basic.yaml  clm.yaml  llama.yaml
config/example/slurm/: debug.yaml  genius.yaml  wice.yaml
config/example/tokenizer/: basic.yaml  hf_train.yaml  llama.yaml  load.yaml
config/model/deberta/: alt.json
config/model/llama-2/: config.json
config/model/mbert/: config.json
config/model/tinystories/: config.json
config/weights/: wiki_chars.json  wiki_docs.json
docs/: finetune.md  mbert.md  metrics.md  pretrain.md  streaming.md  tokenizer.md
scratch/: GlotScript.tsv  bible_langs.txt  lang_mappings.json  language_mappings.json  mC4_langs.tsv  make_mappings.py  monolingual_debug.py  nllb_lang_pairs.py  nllb_pairs.json  sib200_results.csv  sib_plotter.py
scripts/: baseline.py  create_all_methods_partition.py  evaluate.py  evaluate_llama.py  fertility.py  get_pre_filter_stats.py  lm-eval-plot.ipynb  process_results.py  save_tokenizer.py  set_up_datasets_and_tokenizer.py
src/texieve/: __init__.py
src/texieve/data/: loader.py  processing.py  source_loaders.py
src/texieve/experiment/: __init__.py  experiment.py
src/texieve/model/: __init__.py  base.py  finetune.py  mixins.py  pretrain.py
src/wqe/: __init__.py
test/data/: test_loader.py
(+31 files in other folders)
